log
Fri Mar 20 10:22:04 PM UTC 2026: 
 exercises.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
ceef71b
Fri Mar 20 10:32:58 PM UTC 2026: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|3
total_score: 20/70
227453d
Fri Mar 20 10:41:57 PM UTC 2026: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   65 |       suma += dato;
      |            ^~
32fbe16
Fri Mar 20 10:42:44 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:15: error: dereferencing ‘void *’ pointer [-Werror]
   63 |    int dato = *(first(L));
      |               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
   63 |    int dato = *(first(L));
      |               ^
exercises.c:64:15: error: comparison between pointer and integer [-Werror]
   64 |    while(dato != NULL){
      |               ^~
cc1: all warnings being treated as errors
47a469b
Fri Mar 20 10:43:06 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:15: error: dereferencing ‘void *’ pointer [-Werror]
   63 |    int dato = *(first(L));
      |               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
   63 |    int dato = *(first(L));
      |               ^
cc1: all warnings being treated as errors
338578e
Fri Mar 20 10:46:23 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:7: error: expected ‘,’ or ‘;’ before ‘suma’
   65 |       suma += dato;
      |       ^~~~
exercises.c:64:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   64 |       int dato = *((int *) first(L))
      |           ^~~~
cc1: all warnings being treated as errors
677f6fb
Fri Mar 20 10:55:55 PM UTC 2026: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 30/70
6110dae
